--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -36,6 +36,8 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem "faker", "~> 2.1"
 
+  gem 'factory_bot_rails'
+
   gem 'guard-rspec'
   gem 'rspec-rails', '~> 4.0.0.beta4'
   gem 'rails-controller-testing'
