--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -42,6 +42,9 @@ group :development, :test do
   gem 'rspec-rails', '~> 4.0.0.beta4'
   gem 'rails-controller-testing'
 
+  gem 'rubocop', '~> 0.59.2', require: false
+  gem 'rubocop-rspec'
+
   gem 'capybara'
   gem 'selenium-webdriver'
 end
