^ fix rubocop offences

--- a/rails/.rubocop.yml
+++ b/rails/.rubocop.yml
@@ -24,11 +24,11 @@ AllCops:
 Style/Documentation:
   Enabled: false
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 
 Style/FrozenStringLiteralComment:
-  Enabled: false
+  Enabled: true
 
 Style/StringLiterals:
   Enabled: false
