--- a/rails/docker-compose.yml
+++ b/rails/docker-compose.yml
@@ -5,6 +5,7 @@ x-default: &default
     context: .
     dockerfile: ./Dockerfile
     args:
+      YARN_VERSION: 1.19.1
       RUBY_VERSION: '2.3.0'
       UPDATE_RUBYGEMS: 'no'
       BUNDLER_VERSION: '1.13.1'
